Fixed responsive design alignment issue
Fixed responsive design alignment issue in the T-Fin Pricing Page.

--- a/pack.css
+++ b/pack.css
@@ -234,3 +234,8 @@ i.fa.fa-check-circle.package_features_green {
     } 
 }
 
+@media only screen and (max-width: 600px) {
+  .columnstf {
+    width: 100%;
+  }
+}
